--- a/KlientEthernet/mainwindow.ui
+++ b/KlientEthernet/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>615</height>
+    <width>1826</width>
+    <height>629</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -185,9 +185,9 @@
     </item>
     <item>
      <widget class="QWidget" name="widget_2" native="true">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item alignment="Qt::AlignRight">
-        <widget class="QLabel" name="label_9">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="rotate" name="label_9">
          <property name="text">
           <string>Kciuk - Czujnik nacisku</string>
          </property>
@@ -197,7 +197,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="rotate" name="label">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -213,7 +213,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_5">
+        <widget class="rotate" name="label_5">
          <property name="text">
           <string>Palec wskazujący - Czujnik nacisku</string>
          </property>
@@ -223,7 +223,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_8">
+        <widget class="rotate" name="label_8">
          <property name="text">
           <string>Palec wskazujący - Czujnik zgięcia</string>
          </property>
@@ -233,7 +233,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_2">
+        <widget class="rotate" name="label_2">
          <property name="text">
           <string>Palec środkowy - Czujnik nacisku</string>
          </property>
@@ -243,7 +243,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_6">
+        <widget class="rotate" name="label_6">
          <property name="text">
           <string>Palec środkowy - Czujnik zgięcia</string>
          </property>
@@ -253,7 +253,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_3">
+        <widget class="rotate" name="label_3">
          <property name="text">
           <string>Palec serdeczny - Czujnik nacisku</string>
          </property>
@@ -263,7 +263,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_10">
+        <widget class="rotate" name="label_10">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -282,7 +282,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_4">
+        <widget class="rotate" name="label_4">
          <property name="text">
           <string>Mały palec - Czujnik nacisku</string>
          </property>
@@ -292,7 +292,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_7">
+        <widget class="rotate" name="label_7">
          <property name="text">
           <string>Mały palec - czujnik zgięcia</string>
          </property>
@@ -311,7 +311,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>1826</width>
      <height>26</height>
     </rect>
    </property>
@@ -351,6 +351,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>rotate</class>
+   <extends>QLabel</extends>
+   <header>rotate.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
